acceuil design fini

--- a/accueil.html
+++ b/accueil.html
@@ -15,7 +15,7 @@
 <body>
     <!-- Navigation bar -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
-        <a class="navbar-brand" href="acceuil.html">
+        <a class="navbar-brand" href="accueil.html">
             <img src="images/logo.png" height="60" alt="Sportify Logo">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,7 +49,7 @@
             <h1 class="display-4">Sportify</h1>
             <p class="lead">Consultation Sportive</p>
             <p class="bienvenue">
-                Bienvenue sur Sportify, la plateforme de consultation sportive de la communauté Omnes Education. Que votre intérêt porte pour les sports d’équipe, de raquette, de natation ou bien d’autres, Sportify saura vous garder informé de ce qui se passe dans notre communauté et vous donner l’opportunité de pratiquer ces sports, en étant accompagné de nos meilleurs coachs, terrains et équipements. Explorez notre site et surpassez-vous !
+                Bienvenue sur Sportify, la plateforme sportive de la communauté Omnes Education. Que vous soyez passionné par les sports d'équipe, les sports de raquette, la natation ou d'autres disciplines, Sportify vous tiendra informé des activités de notre communauté et vous offrira l'opportunité de pratiquer votre sport préféré, encadré par nos meilleurs coachs, sur des terrains de qualité et avec des équipements de pointe. Explorez notre site et dépassez-vous !
             </p>
         </div>
         
@@ -100,23 +100,23 @@
             <h2 class="text-center">Avis client</h2>
             <div class="row">
                 <div class="col-md-4">
-                    <h4 class="text-left">Giloulefifou05 :</h4>
-                    <p class="text-left" style="font-size: 20px;"><i>"Salle de sport très propre, les coachs sont super sympas et de bons conseils..."</i></p>
+                    <h4 class="text-left">Guytoudu78 :</h4>
+                    <p class="text-left" style="font-size: 20px;"><i>"Personnels toujours à l'écoute et matériel niquel ! Ravis de mon abonnement."</i></p>
                 </div>
                 <div class="col-md-4">
-                    <h4 class="text-right">Maxime Tran :</h4>
-                    <p class="text-right" style="font-size: 20px;"><i>"Salle de sport magnifique, les coachs et les adhérents sont prêts à aider..."</i></p>
+                    <h4 class="text-left">Max :</h4>
+                    <p class="text-left" style="font-size: 20px;"><i>"Je recommande pour suer un max. J'ai entendu que les vestaires étaient biens, j'ai pas été vérifié."</i></p>
                 </div>
                 <div class="col-md-4">
-                    <h4 class="text-left">The rock :</h4>
-                    <p class="text-left" style="font-size: 20px;"><i>"Salle très agréable avec tout ce qu'il faut afin de s'entrainer..."</i></p>
+                    <h4 class="text-left">MaximeSchnd:</h4>
+                    <p class="text-left" style="font-size: 20px;"><i>"Coachs de qualité! Ils me reverront souvent."</i></p>
                 </div>
             </div>
         </section>
     </main>
 
     <!-- Footer -->
-    <footer class="footer bg-light text-center py-4">
+    <footer class="footer text-center py-4">
         <div class="container">
             <p>Contactez-nous :</p>
             <p>
