--- a/accueil.html
+++ b/accueil.html
@@ -54,7 +54,7 @@
         </div>
         
         <section class="my-5">
-            <h2 class="text-center">Bulletin sportif de la semaine</h2>
+            <h2 class="text-center">Evènements à venir</h2>
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
                     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -80,7 +80,7 @@
                         <img src="images/basket.jpg" class="d-block w-100" alt="Pétanque Event">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Finale de basket</h5>
-                            <p>Venez assistez à l'évènement vedette de basket...</p>
+                            <p>Venez assister à l'évènement vedette de basket...</p>
                         </div>
                     </div>
                 </div>
@@ -108,7 +108,7 @@
                     <p class="text-left" style="font-size: 20px;"><i>"Je recommande pour suer un max. J'ai entendu que les vestaires étaient biens, j'ai pas été vérifié."</i></p>
                 </div>
                 <div class="col-md-4">
-                    <h4 class="text-left">MaximeSchnd:</h4>
+                    <h4 class="text-left">MaximeSchnd :</h4>
                     <p class="text-left" style="font-size: 20px;"><i>"Coachs de qualité! Ils me reverront souvent."</i></p>
                 </div>
             </div>
