--- a/connexion.html
+++ b/connexion.html
@@ -47,9 +47,9 @@
         <h1> Bienvenue </h1>
         <h2> Quel type d'utilisateur êtes-vous ?</h2>
         <center>
-            <a href="admin.html" class="btn btn-primary">Administration</a>
-            <a href="client.html" class="btn btn-primary">Client</a>
-            <a href="coach.html" class="btn btn-primary">Coach</a>
+            <a href="connexionAdmin.html" class="btn btn-primary">Administration</a>
+            <a href="connexionClient.html" class="btn btn-primary">Client</a>
+            <a href="connexionCoach.html" class="btn btn-primary">Coach</a>
         </center>
     </div>
 
