--- a/choixChat.html
+++ b/choixChat.html
@@ -103,7 +103,7 @@
             <br><br><br>
         </main>
         <!-- Insertion des codes javascript nécessaires au bon fonctionnement de la page-->
-        <script src="accueil.js"></script>
+        <script src="recherche.js"></script>
         <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     </div>
