--- a/connexionAdmin.html
+++ b/connexionAdmin.html
@@ -9,7 +9,7 @@
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <title>Connexion</title>
     <link rel="stylesheet" type="text/css" href="toutParcourir.css">   
-    <link rel="stylesheet" href="connexion.css">
+    <link rel="stylesheet" href="accueil.css">
 
 </head>
 
@@ -107,7 +107,7 @@
             <br><br><br>
         </main>
         <!-- Insertion des codes javascript nécessaires au bon fonctionnement de la page-->
-        <script src="accueil.js"></script>
+        <script src="recherche.js"></script>
         <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     </div>
