--- a/horaires.html
+++ b/horaires.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <title>Basketball</title>
-    <link rel="stylesheet" type="text/css" href="Projet4Gilles.css">
-    <link rel="stylesheet" href="Projet5.css">
+    <link rel="stylesheet" type="text/css" href="toutParcourir.css">
+    <link rel="stylesheet" href="accueil.css">
     <style>
         /* Permet d'ajuster précisemment le contenu de notre page sans passer par un fichier css*/
         body {
@@ -53,7 +53,7 @@
         <script src="https://kit.fontawesome.com/c0bfb983cf.js" crossorigin="anonymous"></script>
         <div class="nav-item">
             <!-- Logo du site qui permet de retourner rapidement à l'accueil quand on clique dessus -->
-            <a href="Projet4.html">
+            <a href="accueil.html">
                 <img src="SportifyV2.png" height="80px" width="70px" />
             </a>
         </div>
@@ -63,25 +63,25 @@
                 <ion-icon name="close"></ion-icon>
             </div>
             <div class="nav-links">
-                <a href="projet4.html">
+                <a href="accueil.html">
                     <div class="nav-link">
                         <ion-icon name="home"></ion-icon>
                         Accueil
                     </div>
                 </a>
-                <a href="projet5.html">
+                <a href="connexion.html">
                     <div class="nav-link">
                         <ion-icon name="person"></ion-icon>
                         Compte
                     </div>
                 </a>
-                <a href="VFToutParcourir.html">
+                <a href="toutParcourir.html">
                     <div class="nav-link">
                         <ion-icon name="book"></ion-icon>
                         Tout Parcourir
                     </div>
                 </a>
-                <a href="RDV.html">
+                <a href="rdv.html">
                     <div class="nav-link">
                         <ion-icon name="time"></ion-icon>
                         Rendez-Vous
