--- a/oldtoutParcourir.html
+++ b/oldtoutParcourir.html
@@ -7,10 +7,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <title>Choix du profil</title>
-    <link rel="stylesheet" type="text/css" href="accueil.css">
+    <title>Tout parcourir</title>
+    <link rel="stylesheet" type="text/css" href="toutParcourir.css">
     <link rel="stylesheet" href="connexion.css">
+
 </head>
+
+<!-- script permettant d'afficher la liste des activités et des sports quand on clique sur le bouton correspondant-->
+<script>
+    function toggleActivities() {
+        var activitiesContainer = document.getElementById("activities-container");
+        activitiesContainer.style.display = (activitiesContainer.style.display === "none") ? "block" : "none";
+    }
+
+    function toggleSports() {
+        var sportsContainer = document.getElementById("sports-container");
+        sportsContainer.style.display = (sportsContainer.style.display === 'none') ? "block" : "none";
+    }
+</script>
 
 <body>
     <!-- Création du wrapper -->
@@ -24,7 +38,7 @@
         <script src="https://kit.fontawesome.com/c0bfb983cf.js" crossorigin="anonymous"></script>
         <div class="nav-item">
             <!-- Logo du site qui permet de retourner rapidement à l'accueil quand on clique dessus -->
-            <a href="Projet4.html">
+            <a href="accueil.html">
                 <img src="SportifyV2.png" height="80px" width="70px" />
             </a>
         </div>
@@ -67,15 +81,65 @@
             </div>
         </nav>
         <main>
-            <form>
-                <h1> Bienvenue </h1>
-                <h2> Quel type d'utilisateur êtes-vous </h2>
-                <center>
-                    <a href="admin.html" class="button">Administration</a> <!--Lien vers la page admin-->
-                    <a href="client.html" class="button">Client</a> <!--Lien vers la page client-->
-                    <a href="coach.html" class="button">Coach</a> <!--Lien vers la page Coach-->
-                </center>
-            </form>
+            <h1>Tout Parcourir</h1><br><br>
+
+            <div class="button-subcontainer">
+                <div class="button-subcontainer">
+                    <button class="button" onclick="toggleActivities()">Activités Sportives</button>
+                </div>
+                <div class="button-subcontainer">
+                    <button class="button" onclick="toggleSports()">Sports de Compétition</button>
+                </div>
+                <div class="button-subcontainer">
+                    <button class="button" onclick="window.location.href='salle.html'">Salle de Sport Omnes</button>
+                </div>
+            </div>
+
+
+                <!-- On met les boutons correspondants aux sports et activités. Ces boutons renvoient vers le fichier php avec le choix de l'activité dans l'URL-->
+
+            <p align="center">
+                <img src="Course.jpg" alt="Fitness" class="image" style="text-align:center">
+                <img src="Football.jpg" alt="Football" class="image" style="text-align:center">
+                <img src="SalleSports.jpg" alt="Salle de Sport" class="image" style="text-align:center">
+            </p align="center">
+
+            <br><br><br><br>
+
+            <div class="button-subcontainer">
+                <div class="activities-container" id="activities-container" style="display: none;">
+                    <button class="button" name="choix" value="1"
+                        onclick="window.location.href='tp7exo1.php?choix=1'">Musculation</button>
+                    <button class="button" name="choix" value="2"
+                        onclick="window.location.href='tp7exo1.php?choix=2'">Fitness</button>
+                    <button class="button" name="choix" value="3"
+                        onclick="window.location.href='tp7exo1.php?choix=3'">Biking</button>
+                        <button class="button" name="choix" value="4"
+                        onclick="window.location.href='tp7exo1.php?choix=4'">Cardio-Training</button>
+                        <button class="button" name="choix" value="5"
+                        onclick="window.location.href='tp7exo1.php?choix=5'">Cours collectifs</button>
+                </div>
+            </div>
+            <br>
+            <div class="button-subcontainer">
+                <div class="sports-container" id="sports-container" style="display: none;">
+                    <button class="button" name="choix" value="6"
+                        onclick="window.location.href='tp7exo1.php?choix=6'">Basketball</button>
+                        <button class="button" name="choix" value="7"
+                        onclick="window.location.href='tp7exo1.php?choix=7'">Football</button>
+                        <button class="button" name="choix" value="8"
+                        onclick="window.location.href='tp7exo1.php?choix=8'">Rugby</button>
+                        <button class="button" name="choix" value="9"
+                        onclick="window.location.href='tp7exo1.php?choix=9'">Tennis</button>
+                        <button class="button" name="choix" value="10"
+                        onclick="window.location.href='tp7exo1.php?choix=10'">Natation</button>
+                        <button class="button" name="choix" value="11"
+                        onclick="window.location.href='tp7exo1.php?choix=11'">Plongeon</button>
+                </div>
+            </div>
+
+            <br><br>
+
             <footer class="footer"> <!-- Création du footer -->
                 <p>Contactez-nous :</p>
                 <p>
@@ -106,7 +170,6 @@
         <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     </div>
-
 </body>
 
 </html>
