--- a/connexionClient.html
+++ b/connexionClient.html
@@ -15,12 +15,10 @@
 <body>
     <!-- Création du wrapper -->
     <div class="wrapper">
-        <div class="search-container"> <!-- Barre de recherche -->
-            <div class="search">
-                <input type="search" id="search-input" placeholder="Taper pour Rechercher">
-                <i id="search-button" class="fa-solid fa-magnifying-glass"></i>
+            <div class="search-container form-inline my-2 my-lg-0 ml-auto">
+                <input type="search" id="search-input" placeholder="Taper pour Rechercher" class="form-control mr-sm-2">
+                <button id="search-button" class="btn my-2 my-sm-0" type="button">Rechercher</button>
             </div>
-        </div>
         <script src="https://kit.fontawesome.com/c0bfb983cf.js" crossorigin="anonymous"></script>
         <div class="nav-item"> <!-- Logo du site qui permet de retourner rapidement à l'accueil quand on clique dessus -->
             <a href="accueil.css">
