--- a/rdv.html
+++ b/rdv.html
@@ -16,11 +16,9 @@
 <body>
     <!-- Création du wrapper -->
     <div class="wrapper">
-        <div class="search-container"> <!-- Barre de recherche -->
-            <div class="search">
-                <input type="search" id="search-input" placeholder="Taper pour Rechercher">
-                <i id="search-button" class="fa-solid fa-magnifying-glass"></i>
-            </div>
+        <div class="search-container form-inline my-2 my-lg-0 ml-auto">
+            <input type="search" id="search-input" placeholder="Taper pour Rechercher" class="form-control mr-sm-2">
+            <button id="search-button" class="btn my-2 my-sm-0" type="button">Rechercher</button>
         </div>
         <script src="https://kit.fontawesome.com/c0bfb983cf.js" crossorigin="anonymous"></script>
         <div class="nav-item">
@@ -97,7 +95,7 @@
             <br><br><br>
         </main>
         <!-- Insertion des codes javascript nécessaires au bon fonctionnement de la page-->
-        <script src="accueil.js"></script>
+        <script src="recherche.js"></script>
         <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     </div>
