--- a/sports/natation.html
+++ b/sports/natation.html
@@ -55,6 +55,7 @@
                                 <img src="images/coach10.jpeg" alt="Ariel Laptitesirene" class="img-fluid">
                             </div>
                             <div class="col-md-8">
+                                <p><strong>Salle:</strong> EM321</p>
                                 <p><strong>Téléphone:</strong> 07 46 91 73 31</p>
                                 <p><strong>Email:</strong> <a href="mailto:ariel.laptitesirene@edu.ece.fr">ariel.laptitesirene@edu.ece.fr</a></p>
                                 <p><strong>CV:</strong> Formation: Diplômée en natation sportive. Expériences: Entraîneur de natation depuis 5 ans. Autres: Spécialisée en endurance et technique de nage.</p>
