--- a/sports/plongeon.html
+++ b/sports/plongeon.html
@@ -55,6 +55,7 @@
                                 <img src="images/coach11.jpeg" alt="Nicolas Latetenba" class="img-fluid">
                             </div>
                             <div class="col-md-8">
+                                <p><strong>Salle:</strong> EM218</p>
                                 <p><strong>Téléphone:</strong> 07 46 91 73 32</p>
                                 <p><strong>Email:</strong> <a href="mailto:nicolas.latetenba@edu.ece.fr">nicolas.latetenba@edu.ece.fr</a></p>
                                 <p><strong>CV:</strong> Formation: Champion national de plongeon. Expériences: Entraîneur de plongeon depuis 6 ans. Autres: Spécialisé en technique et acrobatie.</p>
