--- a/sports/tennis.html
+++ b/sports/tennis.html
@@ -55,6 +55,7 @@
                                 <img src="images/coach9.jpeg" alt="Nina Iguess" class="img-fluid">
                             </div>
                             <div class="col-md-8">
+                                <p><strong>Salle:</strong> SC319</p>
                                 <p><strong>Téléphone:</strong> 07 46 91 73 30</p>
                                 <p><strong>Email:</strong> <a href="mailto:nina.iguess@edu.ece.fr">nina.iguess@edu.ece.fr</a></p>
                                 <p><strong>CV:</strong> Formation: Diplômée en tennis de compétition. Expériences: Entraîneur de tennis depuis 7 ans. Autres: Spécialisée en technique de jeu et stratégie.</p>
