--- a/alimentation.html
+++ b/alimentation.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+        <link rel="icon" type="image/png" href="images/logo.png" />
     <title>Conseils</title>
     <link rel="stylesheet" type="text/css" href="toutParcourir.css">   
     <link rel="stylesheet" href="accueil.css">
