--- a/creerCompte.html
+++ b/creerCompte.html
@@ -54,8 +54,12 @@
                 <br><br>
                 <form>
                     <div class="form-group">
-                        <label for="fullName">Nom et Prénom</label>
-                        <input type="text" class="form-control" id="fullName" placeholder="Entrez votre nom et prénom">
+                        <label for="fullName">Nom</label>
+                        <input type="text" class="form-control" id="fullName" placeholder="Entrez votre nom">
+                    </div>
+                    <div class="form-group">
+                        <label for="fullName">Prénom</label>
+                        <input type="text" class="form-control" id="fullName" placeholder="Entrez votre prénom">
                     </div>
                     <div class="form-group">
                         <label for="address1">Adresse Ligne 1</label>
