--- a/connexionClient.html
+++ b/connexionClient.html
@@ -52,7 +52,7 @@
             <div class="col-md-6">
                 <h1 class="display-4 text-center">Page Client</h1>
                 <br><br>
-                <form>
+                <form action="connexionClient.html" >
                     <div class="form-group">
                         <label for="studentId">ID (Numero Carte etudiant)</label>
                         <input type="text" class="form-control" id="studentId" placeholder="Entrez votre ID">
