--- a/connexionAdmin.html
+++ b/connexionAdmin.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
 
 <head>
-    <!-- Meta tags and Bootstrap CSS -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="accueil.css" />
     <link rel="icon" type="image/png" href="images/logo.png" />
-    <title>Connexion</title>
+    <link rel="stylesheet" href="accueil.css" />
+    <link rel="stylesheet" href="connexion.css">
+    <style>
+        .hover-link:hover {
+            color: yellow;
+        }
+    </style>
+    <title>SPORTIFY - Connexion</title>
 </head>
 
 <body>
-    <!-- Navigation bar -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <a class="navbar-brand" href="accueil.html">
             <img src="images/logo.png" height="60" alt="Sportify Logo">
@@ -39,43 +42,33 @@
             </ul>
             <div class="search-container form-inline my-2 my-lg-0 ml-auto">
                 <input type="search" id="search-input" placeholder="Taper pour Rechercher" class="form-control mr-sm-2">
-                <button id="search-button" class="btn my-2 my-sm-0" type="button">Rechercher</button>
+                <button id="search-button" class="btn btn-primary my-2 my-sm-0" type="button">Rechercher</button>
             </div>
         </div>
     </nav>
-    <br> <br> <br><br> <br> <br>
-
-    <main>
-        <center>
-        <form action="connexionCoachAdmin.php" method="post">
-            <h1>Page Administration</h1>
-            <!-- Titre principal de la page -->
-
-            <h2>Remplissez vos informations personnelles pour vous connecter: </h2>
-            <!-- Sous-titre pour indiquer à l'utilisateur de remplir ses informations -->
-
-            <div class="inputs">
-                <!-- Div pour regrouper les champs de saisie -->
-
-                <input type="text" name="email" placeholder="Email">
-                <!-- Champ de saisie pour l'ID -->
-
-                <input type="password" name="password" placeholder="Mot de passe">
-                <!-- Champ de saisie pour le mot de passe -->
+    <br><br><br><br><br>
+    <div class="container mt-5 pt-5">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <h1 class="display-4 text-center">Page Administration</h1>
+                <br><br>
+                <form action="connexionCoachAdmin.php" >
+                    <div class="form-group">
+                        <label for="Email">Email</label>
+                        <input type="text" class="form-control" id="Email" placeholder="Entrez votre Email">
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Mot de passe</label>
+                        <input type="password" class="form-control" id="password" placeholder="Entrez votre mot de passe">
+                    </div>
+                    <div class="text-center">
+                        <button type="submit" class="btn btn-primary my-2 my-sm-0">Se connecter</button>
+                    </div>
+                </form>
             </div>
-            <br>
-
-            <div align="center">
-                <!-- Div pour aligner le contenu au centre -->
-
-                <button type="submit" name="button1" value="Soumettre">Se connecter</button>
-                <!-- Bouton de connexion -->
-
-            </div>
-        </form>
-        </center>
-        <br><br>
-    <!-- Footer -->
+        </div>
+    </div>
+    <br><br><br>
     <footer class="footer text-center py-4">
         <div class="container">
             <p>Contactez-nous :</p>
@@ -98,10 +91,10 @@
         </div>
     </footer>
 
-    <!-- Bootstrap JS, Popper.js, and jQuery -->
     <script src="recherche.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 
 </html>
