--- a/connexionCoach.html
+++ b/connexionCoach.html
@@ -1,119 +1,100 @@
 <!DOCTYPE html>
 
 <head>
-    <!-- Inclusion des headers nécessaires au wrapper, au footer et au bon fonctionnement de la page-->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <title>Connexion</title>
-    <link rel="stylesheet" type="text/css" href="toutParcourir.css">   
-    <link rel="stylesheet" href="accueil.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="icon" type="image/png" href="images/logo.png" />
+    <link rel="stylesheet" href="accueil.css" />
+    <link rel="stylesheet" href="connexion.css">
+    <style>
+        .hover-link:hover {
+            color: yellow;
+        }
+    </style>
+    <title>SPORTIFY - Connexion</title>
 </head>
 
 <body>
-    <!-- Création du wrapper -->
-    <div class="wrapper">
-        <div class="search-container form-inline my-2 my-lg-0 ml-auto">
-            <input type="search" id="search-input" placeholder="Taper pour Rechercher" class="form-control mr-sm-2">
-            <button id="search-button" class="btn my-2 my-sm-0" type="button">Rechercher</button>
-        </div>
-        <script src="https://kit.fontawesome.com/c0bfb983cf.js" crossorigin="anonymous"></script>
-        <div class="nav-item"> <!-- Logo du site qui permet de retourner rapidement à l'accueil quand on clique dessus -->
-            <a href="accueil.html">
-                <img src="SportifyV2.png" height="80px" width="70px" />
-            </a>
-        </div>
-        <div id="nav-latteral" class="nav-latteral"> <!-- Création de la barre latérale permettant d'avoir accès à l'accueil, à tout parcourir, au menu compte et au menu rendez-vous -->
-            <div id="nav-close" class="nav-button">
-                <ion-icon name="close"></ion-icon>
-            </div>
-            <div class="nav-links">
-                <a href="accueil.html">
-                    <div class="nav-link">
-                        <ion-icon name="home"></ion-icon>
-                        Accueil
-                    </div>
-                </a>
-                <a href="connexion.html">
-                    <div class="nav-link">
-                        <ion-icon name="person"></ion-icon>
-                        Compte
-                    </div>
-                </a>
-                <a href="toutParcourir.html">
-                    <div class="nav-link">
-                        <ion-icon name="book"></ion-icon>
-                        Tout Parcourir
-                    </div>
-                </a>
-                <a href="rdv.html">
-                    <div class="nav-link">
-                        <ion-icon name="time"></ion-icon>
-                        Rendez-Vous
-                    </div>
-                </a>
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+        <a class="navbar-brand" href="accueil.html">
+            <img src="images/logo.png" height="60" alt="Sportify Logo">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="accueil.html">Accueil</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="connexion.html">Compte</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="toutParcourir.html">Tout Parcourir</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="rdv.html">Rendez-Vous</a>
+                </li>
+            </ul>
+            <div class="search-container form-inline my-2 my-lg-0 ml-auto">
+                <input type="search" id="search-input" placeholder="Taper pour Rechercher" class="form-control mr-sm-2">
+                <button id="search-button" class="btn btn-primary my-2 my-sm-0" type="button">Rechercher</button>
             </div>
         </div>
-        <div id="nav-wrapper"></div>
-        <nav>
-            <div id="nav-open" class="nav-button">
-                <ion-icon name="reorder-three"></ion-icon>
-            </div>
-        </nav>
-        <main>
-            <center>
-            <!-- Formulaire de connexion -->
-            <form action="connexionCoachAdmin.php" method="post">
-                <!-- Titre principal de la page -->
-                <h1>Page Coach</h1>
-                <!-- Sous-titre du formulaire -->
-                <h2>Remplissez vos informations personnelles pour vous connecter: </h2>
-                <div class="inputs">
-                    <!-- Champ de saisie pour l'ID -->
-                    <input type="text" name="id" placeholder="ID" />
-                    <!-- Champ de saisie pour le mot de passe -->
-                    <input type="password" name="password" placeholder="Mot de passe">
-                </div>
-                <div align="center">
-                    <!-- Bouton de soumission du formulaire -->
-                    <button type="submit" name="button1" value="Soumettre">Se connecter</button>
-                </div>
-            </form>
-            </center>
-            <br><br>
-
-            <footer class="footer"> <!-- Création du footer -->
-                <p>Contactez-nous :</p>
-                <p>
-                    <ion-icon name="call-outline" style="margin-right: 10px;"></ion-icon>
-                    <a href="tel:0144876211">01 44 87 62 11</a>
-                </p>
-                <p>
-                    <ion-icon name="storefront-outline" style="margin-right: 10px;"></ion-icon>
-                    <a href="https://www.google.com/maps/search/?api=1&query=10+Rue+Sextius+Michel,+Paris,+France">10
-                        rue Sextius Michel, Paris</a>
-                </p>
-                <p>
-                    <ion-icon name="mail-outline" style="margin-right: 10px;"></ion-icon>
-                    <a href="mailto:salle.sports@omnessports.fr">salle.sports@omnessports.fr</a>
-                </p>
+    </nav>
+    <br><br><br><br><br>
+    <div class="container mt-5 pt-5">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <h1 class="display-4 text-center">Page Coach</h1>
                 <br><br>
-                <!-- Insertion de la carte google maps-->
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8767.74803941555!2d2.28749683632621!3d48.84760618152228!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e6701b4f58251b%3A0x167f5a60fb94aa76!2sECE%20-%20Ecole%20d&#39;ing%C3%A9nieurs%20-%20Engineering%20school.!5e0!3m2!1sfr!2sfr!4v1685374726975!5m2!1sfr!2sfr"
-                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade">
-                </iframe>
-            </footer>
-            <br><br><br>
-        </main>
-        <!-- Insertion des codes javascript nécessaires au bon fonctionnement de la page-->
-        <script src="recherche.js"></script>
-        <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-        <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+                <form action="connexionCoachAdmin.php" >
+                    <div class="form-group">
+                        <label for="Email">Email</label>
+                        <input type="text" class="form-control" id="Email" placeholder="Entrez votre Email">
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Mot de passe</label>
+                        <input type="password" class="form-control" id="password" placeholder="Entrez votre mot de passe">
+                    </div>
+                    <div class="text-center">
+                        <button type="submit" class="btn btn-primary my-2 my-sm-0">Se connecter</button>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
+    <br><br><br>
+    <footer class="footer text-center py-4">
+        <div class="container">
+            <p>Contactez-nous :</p>
+            <p>
+                <i class="fas fa-phone" style="margin-right: 10px;"></i>
+                <a href="tel:0144876211">01 44 87 62 11</a>
+            </p>
+            <p>
+                <i class="fas fa-map-marker-alt" style="margin-right: 10px;"></i>
+                <a href="https://www.google.com/maps/search/?api=1&query=10+Rue+Sextius+Michel,+Paris,+France">10 rue Sextius Michel, Paris, France</a>
+            </p>
+            <p>
+                <i class="fas fa-envelope" style="margin-right: 10px;"></i>
+                <a href="mailto:salle.sports@omnessports.fr">salle.sports@omnessports.fr</a>
+            </p>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8767.74803941555!2d2.28749683632621!3d48.84760618152228!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e6701b4f58251b%3A0x167f5a60fb94aa76!2sECE%20-%20Ecole%20d&#39;ing%C3%A9nieurs%20-%20Engineering%20school.!5e0!3m2!1sfr!2sfr!4v1685374726975!5m2!1sfr!2sfr"
+                width="1000" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+        </div>
+    </footer>
+
+    <script src="recherche.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 
 </html>
