--- a/toutParcourir.html
+++ b/toutParcourir.html
@@ -50,23 +50,23 @@
             <div class="dropdown mb-3">
                 <button class="btn btn-primary">Activités Sportives</button>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item" href="tp7exo1.php?choix=1">Musculation</a>
-                    <a class="dropdown-item" href="tp7exo1.php?choix=2">Fitness</a>
-                    <a class="dropdown-item" href="tp7exo1.php?choix=3">Biking</a>
-                    <a class="dropdown-item" href="tp7exo1.php?choix=4">Cardio-Training</a>
-                    <a class="dropdown-item" href="tp7exo1.php?choix=5">Cours collectifs</a>
+                    <a class="dropdown-item" href="muscu.php">Musculation</a>
+                    <a class="dropdown-item" href="fitness.php">Fitness</a>
+                    <a class="dropdown-item" href="biking.php">Biking</a>
+                    <a class="dropdown-item" href="cardio.php">Cardio-Training</a>
+                    <a class="dropdown-item" href="coursCo.php">Cours collectifs</a>
                 </div>
             </div>
 
             <div class="dropdown mb-3">
                 <button class="btn btn-primary">Sports de Compétition</button>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item" href="tp7exo1.php?choix=6">Basketball</a>
-                    <a class="dropdown-item" href="tp7exo1.php?choix=7">Football</a>
-                    <a class="dropdown-item" href="tp7exo1.php?choix=8">Rugby</a>
-                    <a class="dropdown-item" href="tp7exo1.php?choix=9">Tennis</a>
-                    <a class="dropdown-item" href="tp7exo1.php?choix=10">Natation</a>
-                    <a class="dropdown-item" href="tp7exo1.php?choix=11">Plongeon</a>
+                    <a class="dropdown-item" href="basket.php">Basketball</a>
+                    <a class="dropdown-item" href="foot.php">Football</a>
+                    <a class="dropdown-item" href="rugby.php">Rugby</a>
+                    <a class="dropdown-item" href="tennis.php">Tennis</a>
+                    <a class="dropdown-item" href="natation.php">Natation</a>
+                    <a class="dropdown-item" href="plongeon.php">Plongeon</a>
                 </div>
             </div>
 
