--- a/fitness.html
+++ b/fitness.html
@@ -259,3 +259,5 @@
                 <i class="fas fa-map-marker-alt" style="margin-right: 10px;"></i>
                 <a href="https://www.google.com/maps/search/?api=1&query=10+Rue+Sextius+Michel,+Paris,+France">10 rue Sextius Michel, Paris, France</a>
            
+    </footer>
+<script src="recherche.js"></script>
