--- a/cardio.html
+++ b/cardio.html
@@ -257,5 +257,6 @@
                 <a href="tel:0144876211">01 44 87 62 11</a>
             </p>
             <p>
+                <script src="recherche.js"></script>
                 <i class="fas fa-map-marker-alt" style="margin-right: 10px;"></i>
                 <a href="https://www.google.com/maps/search/?api=1&query=10+Rue
