--- a/loginCoach.html
+++ b/loginCoach.html
@@ -51,7 +51,7 @@
                         Tout Parcourir
                     </div>
                 </a>
-                <a href="rdv.html">
+                <a href="rdv.php">
                     <div class="nav-link">
                         <ion-icon name="time"></ion-icon>
                         Rendez-Vous
