--- a/connexionClient.html
+++ b/connexionClient.html
@@ -37,7 +37,7 @@
                     <a class="nav-link" href="toutParcourir.html">Tout Parcourir</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="rdv.html">Rendez-Vous</a>
+                    <a class="nav-link" href="rdv.php">Rendez-Vous</a>
                 </li>
             </ul>
             <div class="search-container form-inline my-2 my-lg-0 ml-auto">
