--- a/loginClient.html
+++ b/loginClient.html
@@ -49,7 +49,7 @@
                         Tout Parcourir
                     </div>
                 </a>
-                <a href="rdv.html">
+                <a href="rdv.php">
                     <div class="nav-link">
                         <ion-icon name="time"></ion-icon>
                         Rendez-Vous
