--- a/alimentation.html
+++ b/alimentation.html
@@ -54,7 +54,7 @@
             <p><strong>Pour des conseils personnalisés, n'hésitez pas à prendre rendez-vous avec notre nutritioniste.</strong></p>
 
             <div class="button-subcontainer">
-                <button class="button" onclick="window.location.href='nutrioniste.php'">Prendre RDV avec un nutritioniste</button>
+                <button class="button" onclick="window.location.href='nutritioniste.php'">Prendre RDV avec un nutritioniste</button>
             </div>
         </center>
     </main>
