--- a/creerCompte.html
+++ b/creerCompte.html
@@ -132,7 +132,7 @@
                     </div>
                 </form>
                 <div class="text-center mt-3">
-                    <p>J'ai déjà un compte. <a href="connexion.html" class="hover-link">Je souhaite me connecter</a></p>
+                    <p>J'ai déjà un compte. <a href="connexion.php" class="hover-link">Je souhaite me connecter</a></p>
                 </div>
             </div>
         </div>
